# Mass_Sentiment_Analysis_CICD

./: .env.example  .gitignore  ARCHITECTURE.md  Deep_Dive_Analysis.md  Jenkinsfile  README.md  celery_worker.py  conftest.py  localConsole.py  package.json  playwright.config.ts  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt  tailwind.config.js  test_streaming.py  wsgi.py
app/: __init__.py  extensions.py
app/api/: __init__.py  routes.py  schemas.py
app/auth/: __init__.py  forms.py  routes.py
app/auth/templates/auth/: login.html  profile.html  register.html
app/batch/: __init__.py  routes.py  tasks.py
app/batch/templates/batch/: index.html  job_detail.html
app/datasets/: __init__.py  routes.py
app/errors/: __init__.py  handlers.py
app/experiments/: __init__.py  routes.py
app/main/: __init__.py  forms.py  routes.py
app/main/templates/main/: about.html  analysis_detail.html  analyze.html  dashboard.html  history.html  index.html
app/ml/: __init__.py
app/ml/data/: data_merger.py
app/ml/inference/: __init__.py  predictor.py
app/ml/models/: __init__.py  bilstm_attention.py
app/ml/preprocessing/: __init__.py  tokenizer.py
app/ml/spark/: __init__.py  data_processor.py  jobs.py  streaming.py  twitter_streaming.py
app/ml/training/: __init__.py  train.py
app/models/: __init__.py  analysis.py  batch_job.py  dataset.py  user.py
app/services/: __init__.py  batch_service.py  custom_sentiment_service.py  dataset_service.py  sentiment_service.py  training_history_service.py  training_orchestrator.py  twitter_service.py
app/static/src/: input.css
app/streaming/: twitter_collector.py
app/streams/: kafka_twitter_producer.py  twitter_stream.py
app/templates/: base.html  macros.html
app/templates/datasets/: browse.html  index.html  twitter.html  view_psql.html
app/templates/errors/: 404.html  500.html
app/templates/experiments/: index.html
config/: __init__.py  development.py  production.py  spark_config.py  testing.py
data/raw/hf/emotion/: train.parquet
database/: schema.sql  spark_streaming_schema.sql
migrations/versions/: b67d86cf02ec_add_dataset_storage_tables.py
scripts/: export_hf_dataset.py  export_kaggle_dataset.py  init_database.py  load_datasets.py  monitor_collection.py  quickstart_training.py
tests/: __init__.py  conftest.py
tests/playwright/: ui.spec.ts
tests/test_api/: test_analysis.py
tests/test_services/: test_batch_service.py  test_sentiment_service.py
(+1 files in other folders)
