[project]
name = "sentiment-analyzer"
version = "1.0.0"
description = "Advanced sentiment and emotion analysis Flask application"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sentiment Analyzer Team"}
]
keywords = ["sentiment", "analysis", "nlp", "flask", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/CenturyGhost/Mass_Feeling_Analysis_CICD"
Documentation = "https://github.com/CenturyGhost/Mass_Feeling_Analysis_CICD#readme"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "venv", "migrations", "__pycache__"]
known_first_party = ["app", "config"]
known_third_party = ["flask", "sqlalchemy", "celery", "transformers"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
exclude = [
    "venv",
    ".venv",
    "migrations",
    "tests"
]

[[tool.mypy.overrides]]
module = [
    "app.models.*",
    "app.ml.training.*",
    "app.services.sentiment_service",
    "app.services.batch_service"
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/__pycache__/*",
    "*/migrations/*",
    "*/tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert_used check
